<resources>
    <string name="app_name">TU Rec App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Welcome to Burdick Hall!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="scan_button_text">Scan</string>
    <string name="available_machines_text">Available Machines</string>
    <string name="login">Login</string>
    <string name="machines_text">15 Machines Available!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ThirdFragment">ThirdFragment</string>
    <string name="plan_workout">Plan Workout</string>
</resources>