<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.turecapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_WorkoutFragment"
            app:destination="@id/WorkoutFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_GroupFragment"
            app:destination="@id/GroupFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_LockerFragment"
            app:destination="@id/LockerFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.turecapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.turecapp.ThirdFragment"
        android:label="@string/ThirdFragment"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/WorkoutFragment"
        android:name="com.example.turecapp.WorkoutFragment"
        android:label="WorkoutFragment"
        tools:layout="@layout/fragment_workout">

        <action
            android:id="@+id/action_WorkoutFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/GroupFragment"
        android:name="com.example.turecapp.GroupFragment"
        android:label="GroupFragment"
        tools:layout="@layout/fragment_group">

        <action
            android:id="@+id/action_GroupFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/LockerFragment"
        android:name="com.example.turecapp.LockerFragment"
        android:label="LockerFragment"
        tools:layout="@layout/fragment_locker">

        <action
            android:id="@+id/action_LockerFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>